Cleaning files up - Fixing broken styles

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -249,3 +249,8 @@ form {
     margin: 0.4em 0;
   }
 }
+
+.chosen-container {
+  height: auto;
+  min-height: 45px;
+}
