--- a/assets/sass/components/_notifications.scss
+++ b/assets/sass/components/_notifications.scss
@@ -1,6 +1,6 @@
-.pane-oa-notifications-pane {
-  .chosen-container {
-    height: auto;
-    min-height: 45px;
-  }
-}
+//.pane-oa-notifications-pane {
+//  .chosen-container {
+//    height: auto;
+//    min-height: 45px;
+//  }
+//}
